src/graccar/CDictioParser.js
// Generated from ./src/graccar/CDictio.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import CDictioVisitor from './CDictioVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class CDictioParser extends antlr4.Parser {

    static grammarFileName = "CDictio.g4";
    static literalNames = [ null, null, null, null, "'void'", "'main'", 
                            "'int'", "'printf'", "'if'", "'else'", "'true'", 
                            "'false'", "'while'", "'*'", "'/'", "'-'", "'+'", 
                            "'='", "'{'", "'}'", "'.'", null, null, "'('", 
                            "')'", "';'", "','", "'\"'", "'>'", "'>='", 
                            "'<='", "'<'", "'=='", "'!='", "'&&'", "'||'", 
                            "'++'", "'--'", "'return'" ];
    static symbolicNames = [ null, "WS", "COMENTARIO", "SKIPRETUNR", "VOID", 
                             "MAIN", "INT", "PRINTF", "SI", "SINO", "TRUE", 
                             "FALSE", "WHILE", "MUL", "DIV", "SUB", "ADD", 
                             "EQUAL", "LLAVEO", "LLAVECL", "PUNTO", "IDS", 
                             "NUM", "PARENO", "PARENC", "SEMICOLON", "COMMA", 
                             "COMILLAS", "GREATERTHAN", "GREATEREQUAL", 
                             "LOWEREQUAL", "LOWER", "COMPARISON", "NOTEQUAL", 
                             "Y", "O", "INCREMENT", "DECREMENT", "RETURN", 
                             "TEXT" ];
    static ruleNames = [ "main", "contenido", "conditionalif", "ciclowhile", 
                         "elseif", "elsesimple", "condition", "print", "declaration", 
                         "asignation", "change", "expr", "textobteiner" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = CDictioParser.ruleNames;
        this.literalNames = CDictioParser.literalNames;
        this.symbolicNames = CDictioParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 6:
    	    		return this.condition_sempred(localctx, predIndex);
    	case 11:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    condition_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 5);
    		case 2:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	main() {
	    let localctx = new MainContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, CDictioParser.RULE_main);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 26;
	        _la = this._input.LA(1);
	        if(!(_la===4 || _la===6)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 27;
	        this.match(CDictioParser.MAIN);
	        this.state = 28;
	        this.match(CDictioParser.PARENO);
	        this.state = 29;
	        this.match(CDictioParser.PARENC);
	        this.state = 30;
	        this.match(CDictioParser.LLAVEO);
	        this.state = 32;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 2101696) !== 0)) {
	            this.state = 31;
	            this.contenido();
	        }

	        this.state = 34;
	        this.match(CDictioParser.LLAVECL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	contenido() {
	    let localctx = new ContenidoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, CDictioParser.RULE_contenido);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 41; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 41;
	        		this._errHandler.sync(this);
	        		switch(this._input.LA(1)) {
	        		case 8:
	        		    this.state = 36;
	        		    this.conditionalif();
	        		    break;
	        		case 12:
	        		    this.state = 37;
	        		    this.ciclowhile();
	        		    break;
	        		case 7:
	        		    this.state = 38;
	        		    this.print();
	        		    break;
	        		case 6:
	        		    this.state = 39;
	        		    this.declaration();
	        		    break;
	        		case 21:
	        		    this.state = 40;
	        		    this.asignation();
	        		    break;
	        		default:
	        		    throw new antlr4.error.NoViableAltException(this);
	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 43; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	conditionalif() {
	    let localctx = new ConditionalifContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, CDictioParser.RULE_conditionalif);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 45;
	        this.match(CDictioParser.SI);
	        this.state = 46;
	        this.match(CDictioParser.PARENO);
	        this.state = 47;
	        this.condition(0);
	        this.state = 48;
	        this.match(CDictioParser.PARENC);
	        this.state = 49;
	        this.match(CDictioParser.LLAVEO);
	        this.state = 50;
	        this.contenido();
	        this.state = 51;
	        this.match(CDictioParser.LLAVECL);
	        this.state = 54;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        if(la_===1) {
	            this.state = 52;
	            this.elseif();

	        } else if(la_===2) {
	            this.state = 53;
	            this.elsesimple();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ciclowhile() {
	    let localctx = new CiclowhileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, CDictioParser.RULE_ciclowhile);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this.match(CDictioParser.WHILE);
	        this.state = 57;
	        this.match(CDictioParser.PARENO);
	        this.state = 58;
	        this.condition(0);
	        this.state = 59;
	        this.match(CDictioParser.PARENC);
	        this.state = 60;
	        this.match(CDictioParser.LLAVEO);
	        this.state = 61;
	        this.contenido();
	        this.state = 62;
	        this.change();
	        this.state = 63;
	        this.match(CDictioParser.LLAVECL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elseif() {
	    let localctx = new ElseifContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, CDictioParser.RULE_elseif);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this.match(CDictioParser.SINO);
	        this.state = 66;
	        this.match(CDictioParser.SI);
	        this.state = 67;
	        this.match(CDictioParser.PARENO);
	        this.state = 68;
	        this.condition(0);
	        this.state = 69;
	        this.match(CDictioParser.PARENC);
	        this.state = 70;
	        this.match(CDictioParser.LLAVEO);
	        this.state = 71;
	        this.contenido();
	        this.state = 72;
	        this.match(CDictioParser.LLAVECL);
	        this.state = 75;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        if(la_===1) {
	            this.state = 73;
	            this.elseif();

	        } else if(la_===2) {
	            this.state = 74;
	            this.elsesimple();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elsesimple() {
	    let localctx = new ElsesimpleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, CDictioParser.RULE_elsesimple);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(CDictioParser.SINO);
	        this.state = 78;
	        this.match(CDictioParser.LLAVEO);
	        this.state = 79;
	        this.contenido();
	        this.state = 80;
	        this.match(CDictioParser.LLAVECL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	condition(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ConditionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 12;
	    this.enterRecursionRule(localctx, 12, CDictioParser.RULE_condition, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new ComparissonContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 83;
	            this.expr(0);
	            this.state = 84;
	            localctx.op = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(((((_la - 28)) & ~0x1f) === 0 && ((1 << (_la - 28)) & 63) !== 0))) {
	                localctx.op = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 85;
	            this.expr(0);
	            break;

	        case 2:
	            localctx = new TruefalseContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 87;
	            _la = this._input.LA(1);
	            if(!(_la===10 || _la===11)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;

	        case 3:
	            localctx = new ConditionparensContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 88;
	            this.match(CDictioParser.PARENO);
	            this.state = 89;
	            this.condition(0);
	            this.state = 90;
	            this.match(CDictioParser.PARENC);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 103;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new YoContext(this, new ConditionContext(this, _parentctx, _parentState));
	                this.pushNewRecursionContext(localctx, _startState, CDictioParser.RULE_condition);
	                this.state = 94;
	                if (!( this.precpred(this._ctx, 4))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                }
	                this.state = 96; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                do {
	                    this.state = 95;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===34 || _la===35)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 98; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                } while(_la===34 || _la===35);
	                this.state = 100;
	                this.condition(5); 
	            }
	            this.state = 105;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	print() {
	    let localctx = new PrintContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, CDictioParser.RULE_print);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.match(CDictioParser.PRINTF);
	        this.state = 107;
	        this.match(CDictioParser.PARENO);
	        this.state = 110;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 39:
	            this.state = 108;
	            this.textobteiner();
	            break;
	        case 15:
	        case 21:
	        case 22:
	        case 23:
	            this.state = 109;
	            this.expr(0);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===26) {
	            this.state = 112;
	            this.match(CDictioParser.COMMA);
	            this.state = 115;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 15:
	            case 21:
	            case 22:
	            case 23:
	                this.state = 113;
	                this.expr(0);
	                break;
	            case 39:
	                this.state = 114;
	                this.textobteiner();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 121;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 122;
	        this.match(CDictioParser.PARENC);
	        this.state = 123;
	        this.match(CDictioParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaration() {
	    let localctx = new DeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, CDictioParser.RULE_declaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.match(CDictioParser.INT);
	        this.state = 126;
	        this.match(CDictioParser.IDS);
	        this.state = 129;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===17) {
	            this.state = 127;
	            this.match(CDictioParser.EQUAL);
	            this.state = 128;
	            this.expr(0);
	        }

	        this.state = 131;
	        this.match(CDictioParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	asignation() {
	    let localctx = new AsignationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, CDictioParser.RULE_asignation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.match(CDictioParser.IDS);
	        this.state = 134;
	        this.match(CDictioParser.EQUAL);
	        this.state = 135;
	        this.expr(0);
	        this.state = 136;
	        this.match(CDictioParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	change() {
	    let localctx = new ChangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, CDictioParser.RULE_change);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.match(CDictioParser.IDS);
	        this.state = 139;
	        _la = this._input.LA(1);
	        if(!(_la===36 || _la===37)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 140;
	        this.match(CDictioParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 22;
	    this.enterRecursionRule(localctx, 22, CDictioParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	        case 22:
	            localctx = new IntContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 144;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===15) {
	                this.state = 143;
	                this.match(CDictioParser.SUB);
	            }

	            this.state = 146;
	            this.match(CDictioParser.NUM);
	            break;
	        case 23:
	            localctx = new ExprparensContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 147;
	            this.match(CDictioParser.PARENO);
	            this.state = 148;
	            this.expr(0);
	            this.state = 149;
	            this.match(CDictioParser.PARENC);
	            break;
	        case 21:
	            localctx = new IdsContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 151;
	            this.match(CDictioParser.IDS);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 162;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 160;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new TimesdivContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, CDictioParser.RULE_expr);
	                    this.state = 154;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 155;
	                    localctx.operation = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===13 || _la===14)) {
	                        localctx.operation = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 156;
	                    this.expr(6);
	                    break;

	                case 2:
	                    localctx = new SumarestaContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, CDictioParser.RULE_expr);
	                    this.state = 157;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 158;
	                    localctx.operation = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===15 || _la===16)) {
	                        localctx.operation = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 159;
	                    this.expr(5);
	                    break;

	                } 
	            }
	            this.state = 164;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	textobteiner() {
	    let localctx = new TextobteinerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, CDictioParser.RULE_textobteiner);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 165;
	        this.match(CDictioParser.TEXT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

CDictioParser.EOF = antlr4.Token.EOF;
CDictioParser.WS = 1;
CDictioParser.COMENTARIO = 2;
CDictioParser.SKIPRETUNR = 3;
CDictioParser.VOID = 4;
CDictioParser.MAIN = 5;
CDictioParser.INT = 6;
CDictioParser.PRINTF = 7;
CDictioParser.SI = 8;
CDictioParser.SINO = 9;
CDictioParser.TRUE = 10;
CDictioParser.FALSE = 11;
CDictioParser.WHILE = 12;
CDictioParser.MUL = 13;
CDictioParser.DIV = 14;
CDictioParser.SUB = 15;
CDictioParser.ADD = 16;
CDictioParser.EQUAL = 17;
CDictioParser.LLAVEO = 18;
CDictioParser.LLAVECL = 19;
CDictioParser.PUNTO = 20;
CDictioParser.IDS = 21;
CDictioParser.NUM = 22;
CDictioParser.PARENO = 23;
CDictioParser.PARENC = 24;
CDictioParser.SEMICOLON = 25;
CDictioParser.COMMA = 26;
CDictioParser.COMILLAS = 27;
CDictioParser.GREATERTHAN = 28;
CDictioParser.GREATEREQUAL = 29;
CDictioParser.LOWEREQUAL = 30;
CDictioParser.LOWER = 31;
CDictioParser.COMPARISON = 32;
CDictioParser.NOTEQUAL = 33;
CDictioParser.Y = 34;
CDictioParser.O = 35;
CDictioParser.INCREMENT = 36;
CDictioParser.DECREMENT = 37;
CDictioParser.RETURN = 38;
CDictioParser.TEXT = 39;

CDictioParser.RULE_main = 0;
CDictioParser.RULE_contenido = 1;
CDictioParser.RULE_conditionalif = 2;
CDictioParser.RULE_ciclowhile = 3;
CDictioParser.RULE_elseif = 4;
CDictioParser.RULE_elsesimple = 5;
CDictioParser.RULE_condition = 6;
CDictioParser.RULE_print = 7;
CDictioParser.RULE_declaration = 8;
CDictioParser.RULE_asignation = 9;
CDictioParser.RULE_change = 10;
CDictioParser.RULE_expr = 11;
CDictioParser.RULE_textobteiner = 12;

class MainContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CDictioParser.RULE_main;
    }

	MAIN() {
	    return this.getToken(CDictioParser.MAIN, 0);
	};

	PARENO() {
	    return this.getToken(CDictioParser.PARENO, 0);
	};

	PARENC() {
	    return this.getToken(CDictioParser.PARENC, 0);
	};

	LLAVEO() {
	    return this.getToken(CDictioParser.LLAVEO, 0);
	};

	LLAVECL() {
	    return this.getToken(CDictioParser.LLAVECL, 0);
	};

	VOID() {
	    return this.getToken(CDictioParser.VOID, 0);
	};

	INT() {
	    return this.getToken(CDictioParser.INT, 0);
	};

	contenido() {
	    return this.getTypedRuleContext(ContenidoContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof CDictioVisitor ) {
	        return visitor.visitMain(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ContenidoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CDictioParser.RULE_contenido;
    }

	conditionalif = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ConditionalifContext);
	    } else {
	        return this.getTypedRuleContext(ConditionalifContext,i);
	    }
	};

	ciclowhile = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CiclowhileContext);
	    } else {
	        return this.getTypedRuleContext(CiclowhileContext,i);
	    }
	};

	print = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PrintContext);
	    } else {
	        return this.getTypedRuleContext(PrintContext,i);
	    }
	};

	declaration = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeclarationContext);
	    } else {
	        return this.getTypedRuleContext(DeclarationContext,i);
	    }
	};

	asignation = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AsignationContext);
	    } else {
	        return this.getTypedRuleContext(AsignationContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof CDictioVisitor ) {
	        return visitor.visitContenido(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ConditionalifContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CDictioParser.RULE_conditionalif;
    }

	SI() {
	    return this.getToken(CDictioParser.SI, 0);
	};

	PARENO() {
	    return this.getToken(CDictioParser.PARENO, 0);
	};

	condition() {
	    return this.getTypedRuleContext(ConditionContext,0);
	};

	PARENC() {
	    return this.getToken(CDictioParser.PARENC, 0);
	};

	LLAVEO() {
	    return this.getToken(CDictioParser.LLAVEO, 0);
	};

	contenido() {
	    return this.getTypedRuleContext(ContenidoContext,0);
	};

	LLAVECL() {
	    return this.getToken(CDictioParser.LLAVECL, 0);
	};

	elseif() {
	    return this.getTypedRuleContext(ElseifContext,0);
	};

	elsesimple() {
	    return this.getTypedRuleContext(ElsesimpleContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof CDictioVisitor ) {
	        return visitor.visitConditionalif(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CiclowhileContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = CDictioParser.RULE_ciclowhile;
    }

	WHILE() {
	    return this.getToken(CDictioParser.WHILE, 0);
	};

	PARENO() {
	    return this.getToken(CDictioParser.PARENO, 0);
	};

	condition() {
	    return this.getTypedRuleContext(ConditionContext,0);
	};
